--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grafana-azure-datasource",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Grafana Azure Monitor DataSource - Extras",
   "main": "dist/module.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "azure",
     "azure resource graph",
     "azure cost analysis",
+    "azure service health",
     "appinsights",
     "application insights",
     "loganalytics"
